# api/useractivity.go
@@ -21,6 +21,11 @@ type getUserActivityRequest struct {
 	Userid int64 `form:"userid" binding:"required"`
 }
 
+type getPastWorkOutActivityRequest struct {
+	Userid   int64 `form:"userid" binding:"required"`
+	Interval int64 `form:"interval" binding:"required"`
+}
+
 type createUserActivityRecordRequest struct {
 	Type       int32 `json:"type" binding:"required"`
 	Userid     int64 `json:"userid" binding:"required"`
@@ -35,6 +40,16 @@ type userActivityResponse struct {
 	Userid     int64     `json:"userid"`
 	Deviceid   int64     `json:"deviceid"`
 	Locationid int64     `json:"locationid"`
+}
+
+type DailyActivity struct {
+	Day  int     `json:"day"`
+	Time float64 `json:"time"`
+}
+
+type dailyUserActivityResponse struct {
+	Month    int             `json:"month"`
+	Activity []DailyActivity `json:"activity"`
 }
 
 func newUserActivityResponse(activity db.Useractivity) userActivityResponse {
@@ -195,4 +210,98 @@ func (server *Server) getUserActivity(ctx *gin.Context) {
 
 	//rsp := newUserActivityResponse(activity)
 	ctx.JSON(http.StatusOK, activity)
+}
+
+// CreateTags		godoc
+// @Summary			Get User Activity From ID
+// @Description 	Get User Activity data from Db.
+// @Param 			users query getPastWorkOutActivityRequest true "Get user"
+// @Produce 		application/json
+// @Tags 			userActivity
+// @Success 		200 {object} []db.GetPastWorkoutDataRow{}
+// @Router			/getPastWorkoutData [get]
+func (server *Server) getPastWorkoutData(ctx *gin.Context) {
+	var req getPastWorkOutActivityRequest
+
+	if err := ctx.ShouldBindQuery(&req); err != nil {
+		fmt.Println(req)
+		fmt.Println("Failed")
+		fmt.Print(err)
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+
+	args := db.GetPastWorkoutDataParams{
+		Userid:  req.Userid,
+		Column2: req.Interval,
+	}
+
+	activity, err := server.store.GetPastWorkoutData(ctx, args)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	//rsp := newUserActivityResponse(activity)
+	ctx.JSON(http.StatusOK, activity)
+}
+
+// CreateTags		godoc
+// @Summary			Get Day wise User Activity From ID
+// @Description 	Get Day Wise User Activity data from Db.
+// @Param 			users query getUserActivityRequest true "Get user"
+// @Produce 		application/json
+// @Tags 			userActivity
+// @Success 		200 {object} []api.dailyUserActivityResponse{}
+// @Router			/getDayWiseUserActivity [get]
+func (server *Server) getDayWiseUserActivity(ctx *gin.Context) {
+	var req getUserActivityRequest
+
+	if err := ctx.ShouldBindQuery(&req); err != nil {
+		fmt.Println(req)
+		fmt.Println("Failed")
+		fmt.Print(err)
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+
+	activity, err := server.store.GetDayWiseActivity(ctx, req.Userid)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	var rsp []dailyUserActivityResponse
+	for i := 0; i < 12; i += 1 {
+		monthly := dailyUserActivityResponse{}
+		var daily []DailyActivity
+		monthly.Month = i + 1
+		days := daysInMonth(time.Now(), time.Month(i+1))
+		for j := 0; j < days; j += 1 {
+			curr := DailyActivity{
+				Day:  j + 1,
+				Time: 0,
+			}
+			daily = append(daily, curr)
+		}
+		monthly.Activity = daily
+		rsp = append(rsp, monthly)
+	}
+	for _, a := range activity {
+		month := a.Date.Month()
+		day := a.Date.Day()
+		fmt.Println("Date : ", a.Date)
+		fmt.Println("month   : ", month, "  day   : ", day)
+		rsp[month-1].Activity[day-1].Time = a.TotalTimeSeconds
+
+	}
+
+	//rsp := newUserActivityResponse(activity)
+	ctx.JSON(http.StatusOK, rsp)
+}
+
+func daysInMonth(t time.Time, month time.Month) int {
+	t = time.Date(t.Year(), month, 32, 0, 0, 0, 0, time.UTC)
+	daysInMonth := 32 - t.Day()
+
+	return daysInMonth
 }
