# docs/swagger.json
@@ -661,6 +661,74 @@
                 }
             }
         },
+        "/getDayWiseUserActivity": {
+            "get": {
+                "description": "Get Day Wise User Activity data from Db.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "userActivity"
+                ],
+                "summary": "Get Day wise User Activity From ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "userid",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/api.dailyUserActivityResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/getPastWorkoutData": {
+            "get": {
+                "description": "Get User Activity data from Db.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "userActivity"
+                ],
+                "summary": "Get User Activity From ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "interval",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "userid",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/db.GetPastWorkoutDataRow"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/hoursSpentInGymByDay": {
             "get": {
                 "description": "get ClassesOfferedAndAttendees data in Db.",
@@ -1065,6 +1133,17 @@
         }
     },
     "definitions": {
+        "api.DailyActivity": {
+            "type": "object",
+            "properties": {
+                "day": {
+                    "type": "integer"
+                },
+                "time": {
+                    "type": "number"
+                }
+            }
+        },
         "api.checkinActivityResponse": {
             "type": "object",
             "properties": {
@@ -1404,6 +1483,20 @@
                 }
             }
         },
+        "api.dailyUserActivityResponse": {
+            "type": "object",
+            "properties": {
+                "activity": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.DailyActivity"
+                    }
+                },
+                "month": {
+                    "type": "integer"
+                }
+            }
+        },
         "api.deviceResponse": {
             "type": "object",
             "properties": {
@@ -1530,7 +1623,7 @@
                     "type": "integer"
                 },
                 "date_trunc": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -1619,7 +1712,7 @@
                     "type": "integer"
                 },
                 "date_trunc": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -1652,7 +1745,7 @@
             "type": "object",
             "properties": {
                 "day": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "hours_spent": {
                     "type": "integer"
@@ -1703,6 +1796,17 @@
                 },
                 "date_part": {
                     "type": "number"
+                }
+            }
+        },
+        "db.GetPastWorkoutDataRow": {
+            "type": "object",
+            "properties": {
+                "devicetype": {
+                    "type": "string"
+                },
+                "totaltimeseconds": {
+                    "type": "integer"
                 }
             }
         },
